remove useless class attr and use new stylesheet generated with sass (the old one is being deleted)

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 							maximum-scale=1,
 							user-scalable=no">
   <link rel="stylesheet" type="text/css" href="style/fonts.css">
-	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<link rel="stylesheet" type="text/css" href="style/st.css">
 </head>
 
 <body>
 	<div id="container">
-		<a id="top-left-square" class="square"></a>
-		<a id="top-right-square" class="square"></a>
-		<a id="bottom-left-square" class="square"></a>
-		<a id="bottom-right-square" class="square"></a>
+		<a id="top-left-square"></a>
+		<a id="top-right-square"></a>
+		<a id="bottom-left-square"></a>
+		<a id="bottom-right-square"></a>
 	</div>
 
   <div id="control">
