--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!-- width=device-width, height=device-height, -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />	
 	<meta name="viewport" content="
-							width=device-width, 
-							height=device-height, 
 							initial-scale=1, 
 							maximum-scale=1,
 							user-scalable=no">
@@ -28,10 +26,11 @@
 
   <div id="volume" aria-hidden="true" data-icon="&#x2714;"></div>
 
-	<script type="text/javascript" src="js/square_seq.js"></script>
-	<script type="text/javascript" src="js/volume_icons.js"></script>
-	<script type="text/javascript" src="js/player.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/square_seq.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.0.min.js"></script>
+    <script type="text/javascript" src="js/volume_icons.js"></script>
+    <script type="text/javascript" src="js/player.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
